neko/01-neko-deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     app: neko
#   name: neko
#   namespace: neko
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: neko
#   template:
#     metadata:
#       labels:
#         app: neko
#     spec:
#       containers:
#       - nodeName: htpc.local
#         env:
#         - name: ENV
#           value: value
#         image: image:latest
#         name: neko
#         ports:
#         - containerPort: 8000
#         resources:
#           limits:
#             cpu: "4"
#             memory: 3096Mi
#           requests:
#             cpu: "1"
#             memory: 1Gi
#         volumeMounts:
#         - mountPath: /path/inside/container
#           name: neko-storage
#       volumes:
#       - hostPath:
#           path: /external/path
#           name: neko-storage
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: neko
  namespace: neko
ports:
  - name: http
    protocol: TCP
    port: 8086
  - name:
addressType: IPv4
endpoints:
  - addresses:
      - 10.0.0.3
    conditions:
      ready: true
      serving: true
