neko/02-neko-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: neko
  name: neko
  namespace: neko
spec:
  type: ExternalName
  externalName: 10.0.0.3
  ports:
    - port: 8086
    - ports: 52000-52100
