neko/03-neko-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: neko-ingress
  namespace: neko
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`neko.home.bakatrouble.me`)
      services:
        - kind: Service
          name: neko
          namespace: neko
          port: 8086
  tls: {}
